# OpenMDUV380

./: Dockerfile  Makefile  README.md  license.txt  prepare  prepare.bat
MDUV380_firmware/: .cproject  .dockerignore  .gitignore  .project  CMakeLists.txt  CMakePresets.json  Dockerfile  MDUV380_firmware.cfg  MDUV380_firmware.ioc  Makefile  STM32F405VGTX_FLASH.ld  STM32F405VGTX_RAM.ld  build.sh  flash.sh
MDUV380_firmware/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
MDUV380_firmware/Core/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  sysmem.c  system_stm32f4xx.c
MDUV380_firmware/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f405xx.h
MDUV380_firmware/SeggerRTT/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
MDUV380_firmware/SeggerRTT/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
MDUV380_firmware/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
MDUV380_firmware/application/images/: wallpaper.c
MDUV380_firmware/application/include/: applicationMain.h  utils.h
MDUV380_firmware/application/include/dmr_codec/: codec.h
MDUV380_firmware/application/include/functions/: aprs.h  calibration.h  codeplug.h  hotspot.h  rxPowerSaving.h  satellite.h  settings.h  sound.h  ticks.h  trx.h  tx.h  voicePrompts.h  vox.h
MDUV380_firmware/application/include/hardware/: AT1846S.h  EEPROM.h  HR-C6000.h  HX8353E.h  HX8353E_charset.h  HX8353E_charset_JA.h  SPI_Flash.h  radioHardwareInterface.h
MDUV380_firmware/application/include/interfaces/: adc.h  batteryAndPowerManagement.h  batteryRAM.h  clockManager.h  dac.h  gpio.h  gps.h  hr-c6000_spi.h  i2c.h  i2s.h  interrupts.h  pit.h  settingsStorage.h  wdog.h
MDUV380_firmware/application/include/io/: LEDs.h  buttons.h  display.h  keyboard.h  rotary_switch.h
MDUV380_firmware/application/include/usb/: usb_com.h
MDUV380_firmware/application/include/user_interface/: colors.h  menuSystem.h  styles.h  uiCPS.h  uiCaller.h  uiChannelMode.h  uiEvents.h  uiGlobals.h  uiHeader.h  uiHotspot.h  uiLocalisation.h  uiLockScreen.h  uiMenu.h  uiMsg.h  uiPowerOff.h  uiSplashScreen.h  uiUtilities.h  uiVFOMode.h
MDUV380_firmware/application/include/user_interface/languages/: catalan.h  croatian.h  czech.h  danish.h  dutch.h  english.h  finnish.h  french.h  german.h  hungarian.h  italian.h  japanese.h  polish.h  portugues_brazil.h  portuguese.h  romanian.h  slovenian.h  spanish.h  swedish.h  turkish.h  uiLanguage.h
MDUV380_firmware/application/include/user_interface/languages/src/: Makefile  languages_builder.c
MDUV380_firmware/application/source/: applicationMain.c
MDUV380_firmware/application/source/dmr_codec/: codec.c  codec_bin.S  codec_interface.c
MDUV380_firmware/application/source/functions/: aprs.c  calibration.c  codeplug.c  hotspot.c  rxPowerSaving.c  satellite.c  settings.c  sound.c  ticks.c  trx.c  tx.c  voicePrompts.c  vox.c
MDUV380_firmware/application/source/hardware/: AT1846S.c  EEPROM.c  HR-C6000.c  HX8353E_display.c  SPI_Flash.c  radioHardwareInterface.c
MDUV380_firmware/application/source/interfaces/: adc.c  batteryAndPowerManagement.c  batteryRAM.c  clockManager.c  dac.c  gpio.c  gps.c  i2c.c  i2s.c  interrupts.c  pit.c  settingsStorage.c  spi.c  wdog.c
MDUV380_firmware/application/source/io/: Leds.c  buttons.c  display.c  keyboard.c
MDUV380_firmware/application/source/linkerdata/: readme.txt
MDUV380_firmware/application/source/usb/: usb_com.c
MDUV380_firmware/application/source/user_interface/: menuAPRSOptions.c  menuCalibration.c  menuChannelDetails.c  menuContactDetails.c  menuContactList.c  menuDisplayMenuList.c  menuDisplayOptions.c  menuFirmwareInfoScreen.c  menuGPS.c  menuGeneralOptions.c  menuLanguage.c  menuLastHeard.c  menuRSSIScreen.c  menuRadioInfos.c  menuRadioOptions.c  menuSatelliteScreen.c  menuSoundOptions.c  menuSystem.c  menuThemeOptions.c  menuZoneList.c  uiCPS.c  uiCaller.c  uiChannelMode.c  uiEvents.c  uiGlobals.c  uiHeader.c  uiHotspot.c  uiLocalisation.c  uiLockScreen.c  uiMenu.c  uiMessageBox.c  uiNotification.c  uiPowerOff.c  uiPrivateCall.c  uiSplashScreen.c  uiStyles.c  uiTxScreen.c  uiTxTgPcContactOwnId.c  uiUtilities.c  uiVFOMode.c
MDUV380_firmware/cmake/: arm-none-eabi.cmake
MDUV380_firmware/tools/: FirmwareLoader  codec_cleaner.Linux  license.txt  opengd77_stm32_firmware_loader.py
tools/: loader.py  prepare.sh
tools/codec_cleaner/: .gitignore  codec_cleaner.c
tools/package_bin_with_languages/: package.bat
